--- a/_config.yml
+++ b/_config.yml
@@ -14,35 +14,35 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Marco Antonio Ferroñan M # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Portafolio de experimentos, proyectos y publicaciones en ciberseguridad y tecnología... # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  ...
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://AnonymousLas.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: AnonymousLas # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: AnonymousLas # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: AnonymousLas
+  email: AnonymousLas@gihub.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://twitter.com/AnonymousLas # change to your Twitter homepage
+    - https://github.com/AnonymousLas # change to your GitHub homepage
+    - https://www.linkedin.com/in/marco-antonio-ferro%C3%B1an-melchor-a52022273/
+    - https://www.facebook.com/megustaelchaufa13579
     # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
 
 # Site Verification Settings
 webmaster_verifications:
@@ -98,7 +98,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://avatars.githubusercontent.com/u/162050547?s=400&u=e53843b295682d5a3d84af6ee9186d0c6e06f6e9&v=4
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
