--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Marco Antonio Ferroñan M # the main title
+title: Marcus Antonio # the main title
 
 tagline: Portafolio de experimentos, proyectos y publicaciones en ciberseguridad y tecnología... # it will display as the subtitle
 
